# MavPiCam

./: CMakeLists.txt  dockcross-linux-armv7-lts  docker_build.sh  main.cpp  mavpicam.service
